<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/s_m"
        android:paddingTop="@dimen/s_m"
        android:paddingRight="@dimen/s_l"
        android:paddingBottom="@dimen/s_s">

        <com.dsh.launcher.GlyphView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/touch"
            android:layout_height="@dimen/touch"
            android:background="@drawable/bg_icon_btn"
            android:clickable="true"
            android:focusable="true"
            app:glyph="back"
            app:glyphStroke="2dp"
            app:glyphTint="@color/textPrimary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_xs"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                style="@style/Dsh.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                android:text="@string/editor_title" />

            <TextView
                android:id="@+id/tvMeta"
                style="@style/Dsh.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:maxLines="1"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnSave"
            style="@style/Dsh.Btn.Primary"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:paddingLeft="@dimen/s_xl"
            android:paddingRight="@dimen/s_xl"
            android:text="@string/editor_save" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/s_m"
        android:layout_marginRight="@dimen/s_m"
        android:layout_weight="1"
        android:background="@drawable/bg_card"
        android:clipToOutline="true">

        <EditText
            android:id="@+id/edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top|start"
            android:inputType="textMultiLine|textNoSuggestions"
            android:padding="@dimen/s_m"
            android:scrollbars="vertical"
            android:textColor="@color/textPrimary"
            android:textSize="13sp"
            android:typeface="monospace" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/s_m">

        <TextView
            android:id="@+id/btnOpenWith"
            style="@style/Dsh.Btn.Secondary"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/sheet_open_file_with" />
    </LinearLayout>

</LinearLayout>
